<resources>
    <string name="app_name">Campus Pulse</string>
    <string name="brand_tagline">Your campus, in the know.</string>
    <string name="crafted_by">Crafted with care by Aman | 2024eb02381</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_subtitle">Sign in to catch up on campus updates</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="login_loading">Signing in…</string>
    <string name="no_account">New to Campus Pulse? Create an account</string>
    <string name="create_account">Create your account</string>
    <string name="register_subtitle">Choose a role and join your campus community</string>
    <string name="select_role">Account role</string>
    <string name="register">Create account</string>
    <string name="register_loading">Creating account…</string>
    <string name="already_registered">Already registered? Sign in</string>
    <string name="student_space">Student space</string>
    <string name="staff_space">Staff workspace</string>
    <string name="welcome_student">Welcome, Student</string>
    <string name="welcome_staff">Welcome, Staff</string>
    <string name="latest_notices">Latest notices</string>
    <string name="notice_count_one">1 update</string>
    <string name="notice_count_many">%1$d updates</string>
    <string name="no_notices_title">Nothing new yet</string>
    <string name="no_notices_message">Campus announcements will appear here as soon as they are posted.</string>
    <string name="add_notice">Add notice</string>
    <string name="publish_notice">Publish notice</string>
    <string name="compose_notice">Compose a clear update for everyone on campus.</string>
    <string name="notice_title">Notice title</string>
    <string name="notice_description">Description</string>
    <string name="publish">Publish update</string>
    <string name="publishing">Publishing…</string>
    <string name="notice_label">CAMPUS UPDATE</string>
    <string name="posted_by">Posted by %1$s</string>
    <string name="recently">Recently</string>
    <string name="logout">Log out</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    <string name="field_required">This field is required</string>
</resources>
